# todo_plasmoid

./: AUTHORS  CMakeLists.txt
src/applet/: .todoview.cpp.swp  CMakeLists.txt  TODO  korganizerutil.cpp  korganizerutil.h  todoapplet-default.desktop  todoapplet.cpp  todoapplet.h  todoappletconfig.ui  todoitemdelegate.cpp  todoitemdelegate.h  todomodel.cpp  todomodel.h  todomodelcategorydelegate.cpp  todomodelcategorydelegate.h  todoview.cpp  todoview.h
src/dataengine/: CMakeLists.txt  TODO  korganizerutil.cpp  korganizerutil.h  korganizerutil_p.h  plasma-engine-todo.desktop  todoengine.cpp  todoengine.h
